PPL/assignment_1/src/main/mc/parser/.antlr/MCParser.py
# Generated from /Users/macbook/Desktop/NLNNLT/assignment_1/src/main/mc/parser/MC.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'boolean'", 
                     "'int'", "'float'", "'string'", "'void'", "'if'", "'else'", 
                     "'for'", "'do'", "'while'", "'break'", "'continue'", 
                     "'return'", "'true'", "'false'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "';'", "','", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'='", "'!'", "'||'", "'&&'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='" ]

    symbolicNames = [ "<INVALID>", "PRITYPE", "ARRAY_POINTER_TYPE", "BOOLEAN", 
                      "INT", "FLOAT", "STRING", "VOID", "IF", "ELSE", "FOR", 
                      "DO", "WHILE", "BREAK", "CONTINUE", "RETURN", "TRUE", 
                      "FALSE", "INTLIT", "ID", "BOOLEANLIT", "FLOATLIT", 
                      "STRINGLIT", "LB", "RB", "LP", "RP", "LSB", "RSB", 
                      "SEMI", "CM", "ADD", "SUB", "MUL", "DIV", "MOD", "ASSIGN", 
                      "NOT", "OR", "AND", "EQUAL", "NOT_EQUAL", "LESS", 
                      "LESS_OR_EQUAL", "GREATER", "GREATER_OR_EQUAL", "WS", 
                      "COMMENT_BLOCK", "COMMENT_LINE", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_manydecls = 1
    RULE_tail = 2
    RULE_decl = 3
    RULE_vardecl = 4
    RULE_idlist = 5
    RULE_idlisttail = 6
    RULE_varid = 7
    RULE_funcdecl = 8
    RULE_paramdecl = 9
    RULE_listparams = 10
    RULE_listparamstail = 11
    RULE_oneparam = 12
    RULE_body = 13
    RULE_bodylist = 14
    RULE_bodytail = 15
    RULE_onebody = 16
    RULE_stmt = 17
    RULE_ifStmt = 18
    RULE_matchIf = 19
    RULE_unmatchIf = 20
    RULE_forStmt = 21
    RULE_doWhileStmt = 22
    RULE_breakStmt = 23
    RULE_continueStmt = 24
    RULE_returnStmt = 25
    RULE_expStmt = 26
    RULE_exp = 27
    RULE_term1 = 28
    RULE_term2 = 29
    RULE_term3 = 30
    RULE_term4 = 31
    RULE_term5 = 32
    RULE_term6 = 33
    RULE_term7 = 34
    RULE_term8 = 35
    RULE_term9 = 36
    RULE_funcCall = 37
    RULE_explist = 38
    RULE_explisttail = 39
    RULE_functionType = 40

    ruleNames =  [ "program", "manydecls", "tail", "decl", "vardecl", "idlist", 
                   "idlisttail", "varid", "funcdecl", "paramdecl", "listparams", 
                   "listparamstail", "oneparam", "body", "bodylist", "bodytail", 
                   "onebody", "stmt", "ifStmt", "matchIf", "unmatchIf", 
                   "forStmt", "doWhileStmt", "breakStmt", "continueStmt", 
                   "returnStmt", "expStmt", "exp", "term1", "term2", "term3", 
                   "term4", "term5", "term6", "term7", "term8", "term9", 
                   "funcCall", "explist", "explisttail", "functionType" ]

    EOF = Token.EOF
    PRITYPE=1
    ARRAY_POINTER_TYPE=2
    BOOLEAN=3
    INT=4
    FLOAT=5
    STRING=6
    VOID=7
    IF=8
    ELSE=9
    FOR=10
    DO=11
    WHILE=12
    BREAK=13
    CONTINUE=14
    RETURN=15
    TRUE=16
    FALSE=17
    INTLIT=18
    ID=19
    BOOLEANLIT=20
    FLOATLIT=21
    STRINGLIT=22
    LB=23
    RB=24
    LP=25
    RP=26
    LSB=27
    RSB=28
    SEMI=29
    CM=30
    ADD=31
    SUB=32
    MUL=33
    DIV=34
    MOD=35
    ASSIGN=36
    NOT=37
    OR=38
    AND=39
    EQUAL=40
    NOT_EQUAL=41
    LESS=42
    LESS_OR_EQUAL=43
    GREATER=44
    GREATER_OR_EQUAL=45
    WS=46
    COMMENT_BLOCK=47
    COMMENT_LINE=48
    ERROR_CHAR=49
    UNCLOSE_STRING=50
    ILLEGAL_ESCAPE=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manydecls(self):
            return self.getTypedRuleContext(MCParser.ManydeclsContext,0)


        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def getRuleIndex(self):
            return MCParser.RULE_program




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.manydecls()
            self.state = 83
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ManydeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MCParser.DeclContext,0)


        def tail(self):
            return self.getTypedRuleContext(MCParser.TailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_manydecls




    def manydecls(self):

        localctx = MCParser.ManydeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydecls)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.decl()
            self.state = 86
            self.tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MCParser.DeclContext,0)


        def tail(self):
            return self.getTypedRuleContext(MCParser.TailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_tail




    def tail(self):

        localctx = MCParser.TailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tail)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.PRITYPE, MCParser.ARRAY_POINTER_TYPE, MCParser.VOID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.decl()
                self.state = 89
                self.tail()
                pass
            elif token in [MCParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MCParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MCParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_decl




    def decl(self):

        localctx = MCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRITYPE(self):
            return self.getToken(MCParser.PRITYPE, 0)

        def idlist(self):
            return self.getTypedRuleContext(MCParser.IdlistContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_vardecl




    def vardecl(self):

        localctx = MCParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(MCParser.PRITYPE)
            self.state = 99
            self.idlist()
            self.state = 100
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varid(self):
            return self.getTypedRuleContext(MCParser.VaridContext,0)


        def idlisttail(self):
            return self.getTypedRuleContext(MCParser.IdlisttailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_idlist




    def idlist(self):

        localctx = MCParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.varid()
            self.state = 103
            self.idlisttail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdlisttailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MCParser.CM, 0)

        def varid(self):
            return self.getTypedRuleContext(MCParser.VaridContext,0)


        def idlisttail(self):
            return self.getTypedRuleContext(MCParser.IdlisttailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_idlisttail




    def idlisttail(self):

        localctx = MCParser.IdlisttailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_idlisttail)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(MCParser.CM)
                self.state = 106
                self.varid()
                self.state = 107
                self.idlisttail()
                pass
            elif token in [MCParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VaridContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_varid




    def varid(self):

        localctx = MCParser.VaridContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varid)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(MCParser.ID)
                self.state = 114
                self.match(MCParser.LSB)
                self.state = 115
                self.match(MCParser.INTLIT)
                self.state = 116
                self.match(MCParser.RSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionType(self):
            return self.getTypedRuleContext(MCParser.FunctionTypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def paramdecl(self):
            return self.getTypedRuleContext(MCParser.ParamdeclContext,0)


        def body(self):
            return self.getTypedRuleContext(MCParser.BodyContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_funcdecl




    def funcdecl(self):

        localctx = MCParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.functionType()
            self.state = 120
            self.match(MCParser.ID)
            self.state = 121
            self.paramdecl()
            self.state = 122
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def listparams(self):
            return self.getTypedRuleContext(MCParser.ListparamsContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_paramdecl




    def paramdecl(self):

        localctx = MCParser.ParamdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(MCParser.LB)
            self.state = 125
            self.listparams()
            self.state = 126
            self.match(MCParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListparamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oneparam(self):
            return self.getTypedRuleContext(MCParser.OneparamContext,0)


        def listparamstail(self):
            return self.getTypedRuleContext(MCParser.ListparamstailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_listparams




    def listparams(self):

        localctx = MCParser.ListparamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_listparams)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.PRITYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.oneparam()
                self.state = 129
                self.listparamstail()
                pass
            elif token in [MCParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListparamstailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MCParser.CM, 0)

        def oneparam(self):
            return self.getTypedRuleContext(MCParser.OneparamContext,0)


        def listparamstail(self):
            return self.getTypedRuleContext(MCParser.ListparamstailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_listparamstail




    def listparamstail(self):

        localctx = MCParser.ListparamstailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_listparamstail)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.match(MCParser.CM)
                self.state = 135
                self.oneparam()
                self.state = 136
                self.listparamstail()
                pass
            elif token in [MCParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OneparamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRITYPE(self):
            return self.getToken(MCParser.PRITYPE, 0)

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_oneparam




    def oneparam(self):

        localctx = MCParser.OneparamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_oneparam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(MCParser.PRITYPE)
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 142
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.state = 143
                self.match(MCParser.ID)
                self.state = 144
                self.match(MCParser.LSB)
                self.state = 145
                self.match(MCParser.RSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def bodylist(self):
            return self.getTypedRuleContext(MCParser.BodylistContext,0)


        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def getRuleIndex(self):
            return MCParser.RULE_body




    def body(self):

        localctx = MCParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(MCParser.LP)
            self.state = 149
            self.bodylist()
            self.state = 150
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodylistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def onebody(self):
            return self.getTypedRuleContext(MCParser.OnebodyContext,0)


        def bodytail(self):
            return self.getTypedRuleContext(MCParser.BodytailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_bodylist




    def bodylist(self):

        localctx = MCParser.BodylistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_bodylist)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.PRITYPE, MCParser.IF, MCParser.FOR, MCParser.DO, MCParser.BREAK, MCParser.CONTINUE, MCParser.RETURN, MCParser.INTLIT, MCParser.ID, MCParser.BOOLEANLIT, MCParser.FLOATLIT, MCParser.STRINGLIT, MCParser.LB, MCParser.LP]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.onebody()
                self.state = 153
                self.bodytail()
                pass
            elif token in [MCParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodytailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def onebody(self):
            return self.getTypedRuleContext(MCParser.OnebodyContext,0)


        def bodytail(self):
            return self.getTypedRuleContext(MCParser.BodytailContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_bodytail




    def bodytail(self):

        localctx = MCParser.BodytailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_bodytail)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.PRITYPE, MCParser.IF, MCParser.FOR, MCParser.DO, MCParser.BREAK, MCParser.CONTINUE, MCParser.RETURN, MCParser.INTLIT, MCParser.ID, MCParser.BOOLEANLIT, MCParser.FLOATLIT, MCParser.STRINGLIT, MCParser.LB, MCParser.LP]:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.onebody()
                self.state = 159
                self.bodytail()
                pass
            elif token in [MCParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OnebodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MCParser.VardeclContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MCParser.StmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_onebody




    def onebody(self):

        localctx = MCParser.OnebodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_onebody)
        try:
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.PRITYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.vardecl()
                pass
            elif token in [MCParser.IF, MCParser.FOR, MCParser.DO, MCParser.BREAK, MCParser.CONTINUE, MCParser.RETURN, MCParser.INTLIT, MCParser.ID, MCParser.BOOLEANLIT, MCParser.FLOATLIT, MCParser.STRINGLIT, MCParser.LB, MCParser.LP]:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStmt(self):
            return self.getTypedRuleContext(MCParser.IfStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(MCParser.ForStmtContext,0)


        def body(self):
            return self.getTypedRuleContext(MCParser.BodyContext,0)


        def doWhileStmt(self):
            return self.getTypedRuleContext(MCParser.DoWhileStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(MCParser.BreakStmtContext,0)


        def continueStmt(self):
            return self.getTypedRuleContext(MCParser.ContinueStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(MCParser.ReturnStmtContext,0)


        def expStmt(self):
            return self.getTypedRuleContext(MCParser.ExpStmtContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_stmt




    def stmt(self):

        localctx = MCParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_stmt)
        try:
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.ifStmt()
                pass
            elif token in [MCParser.FOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.forStmt()
                pass
            elif token in [MCParser.LP]:
                self.enterOuterAlt(localctx, 3)
                self.state = 170
                self.body()
                pass
            elif token in [MCParser.DO]:
                self.enterOuterAlt(localctx, 4)
                self.state = 171
                self.doWhileStmt()
                pass
            elif token in [MCParser.BREAK]:
                self.enterOuterAlt(localctx, 5)
                self.state = 172
                self.breakStmt()
                pass
            elif token in [MCParser.CONTINUE]:
                self.enterOuterAlt(localctx, 6)
                self.state = 173
                self.continueStmt()
                pass
            elif token in [MCParser.RETURN]:
                self.enterOuterAlt(localctx, 7)
                self.state = 174
                self.returnStmt()
                pass
            elif token in [MCParser.INTLIT, MCParser.ID, MCParser.BOOLEANLIT, MCParser.FLOATLIT, MCParser.STRINGLIT, MCParser.LB]:
                self.enterOuterAlt(localctx, 8)
                self.state = 175
                self.expStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def matchIf(self):
            return self.getTypedRuleContext(MCParser.MatchIfContext,0)


        def unmatchIf(self):
            return self.getTypedRuleContext(MCParser.UnmatchIfContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_ifStmt




    def ifStmt(self):
